src/stage1/stage1-dep-istio-prem.yaml
apiVersion: v1
kind: Service
metadata:
    name: stage1-dep-istio
    labels:
      app: stage1-dep-istio
spec:
  type: NodePort
  ports:
  - port: 50006
    name: http
  selector:
    app: stage1-dep-istio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stage1-dep-istio-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stage1-dep-istio
        version: v1
    spec:
      containers:
      - name: stage1
        image: beatrak/stage1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 50006
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stage1-dep-istio
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: stage1-dep-istio
          servicePort: 50006
---
